tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_errors_on_empty_loop_no_break/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: `loop` must have at least one `break` in it
   ┌─ src/main.nr:10:9
   │
10 │         loop {}
   │         ---- Infinite loops are disallowed
   │

Aborting due to 1 previous error
