tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_errors_on_empty_loop_no_break/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: `loop` must have at least one `break` in it
   ┌─ src/main.nr:10:9
   │
10 │         loop {}
   │         ---- Infinite loops are disallowed
   │

Aborting due to 1 previous error
